# toydb-book

./: .gitignore  PROGRESS.md  README.md  book.toml  setup.sh  track.sh
.github/workflows/: deploy.yml
code/: README.md
code/capstone/: Cargo.toml
code/ch00/: Cargo.toml
code/ch01/: Cargo.toml
code/ch02/: Cargo.toml
code/ch03/: Cargo.toml
code/ch04/: Cargo.toml
code/ch05/: Cargo.toml
code/ch06/: Cargo.toml
code/ch07/: Cargo.toml
code/ch08/: Cargo.toml
code/ch09/: Cargo.toml
code/ch10/: Cargo.toml
code/ch11/: Cargo.toml
code/ch12/: Cargo.toml
code/ch13/: Cargo.toml
code/ch14/: Cargo.toml
code/ch15/: Cargo.toml
code/ch16/: Cargo.toml
code/ch17/: Cargo.toml
code/ch18/: Cargo.toml
code/my-toydb/: Cargo.toml
code/toydb/: Cargo.toml
src/: SUMMARY.md  ch18-5-design-reflection.md  ddia-companion.md  introduction.md
src/beginner/: README.md  ch01-what-is-a-database.md  ch02-in-memory-storage.md  ch03-persistent-storage.md  ch04-serialization.md  ch05-mvcc.md  ch06-sql-lexer.md  ch07-sql-parser.md  ch08-query-planner.md  ch09-query-optimizer.md  ch10-query-executor.md  ch11-sql-features.md  ch12-client-server.md  ch13-async-networking.md  ch14-raft-leader-election.md  ch15-raft-log-replication.md  ch16-raft-durability.md  ch17-integration.md  ch18-testing-and-extensions.md
src/capstone/: README.md  ch19-coding-challenges.md  ch20-system-design.md  ch21-mock-interviews.md
src/ds-narratives/: README.md  ch01-hash-table-storage.md  ch02-b-tree.md  ch03-log-structured-storage.md  ch04-binary-serialization.md  ch05-mvcc-version-chains.md  ch06-state-machine-lexer.md  ch07-ast-as-tree.md  ch07-precedence-climbing.md  ch08-tree-transformations.md  ch09-query-plan-optimization.md  ch10-iterator-volcano.md  ch11-hash-joins.md  (+5 more)
(+288 files in other folders)
